--- a/src/app/coffe/coffe-list/coffe-list.component.css
+++ b/src/app/coffe/coffe-list/coffe-list.component.css
@@ -1,4 +1,28 @@
 .img-fluid {
   width: 100%;
-  height: 300px;
+  height: 323px;
 }
+
+#title {
+  font-family: 'Indie Flower', cursive;font-size: 36px;
+}
+
+#coffe-image{
+  margin-left:5%;
+  margin-right:15%;
+}
+
+#coffe-table{
+  margin-left:5%;
+  margin-right:55%;
+}
+
+#contact{
+  text-align: center;
+  margin-top: 15%;
+}
+
+#principal-title{
+  margin-left:5%;
+}
+
