--- a/src/app/coffe/coffe-list/coffe-list.component.html
+++ b/src/app/coffe/coffe-list/coffe-list.component.html
@@ -25,6 +25,11 @@
       </tr>
     </tbody>
   </table>
+  <p>
+    Total café de origen: {{originNumberCoffe}}
+    <br>
+    Total café de blend: {{blendNumberCoffe}}
+  </p>
 </div>
 <div id="contact">
   <p>Contact us: +57 3102105253 - info@elaromamagico.com - @elaromamagico</p>
